# cg_course

./: .gitignore  README.md  build.sh
docs/: 00-preambule.tex  03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  09-appendix.tex  RPZ_Razin_IU7-44B.fls  RPZ_Razin_IU7-44B.tex  RPZ_Razin_IU7-44B.tex.bak  analys.tex  analysis.tex  biblio.bib  construct.tex  ending.tex  file.fls  file.tex  introduction.tex  main.tex  makefile  materials.tex  packages.fls  packages.tex  preambule.tex  table_of_content.tex  task.tex  tech.tex  title.tex
docs/extradoc/: RPZ_Razin_IU7-44B.fls  RPZ_Razin_IU7-44B.tex
docs/inc/lst/: find_inter.frag  inter.frag  phong.frag  trace.frag
docs/svg-inkscape/: Yuitted_model_svg-tex.pdf_tex  frame_algo_svg-tex.pdf_tex  frame_draw_svg-tex.pdf_tex  raytrace_pixel_svg-tex.pdf_tex  raytrace_tree_svg-tex.pdf_tex
programm/: CMakeLists.txt  cudaFlags.sh  main.cpp  main.cu  mainwindow.cpp  mainwindow.h  mainwindow.ui
programm/Input/: Input.cpp  Input.h
programm/color/: color.cpp  color.cu  color.h
programm/image_adapter/: ImageAdapter.cpp  ImageAdapter.cu  ImageAdapter.h
programm/manager/: baseManager.h
programm/manager/draw/: drawManager.cpp  drawManager.h  drawManagerCreator.cpp  drawManagerCreator.h
programm/manager/load/: loadManager.cpp  loadManager.h  loadManagerCreator.cpp  loadManagerCreator.h
programm/manager/scene/: sceneManager.cpp  sceneManager.h  sceneManagerCreator.cpp  sceneManagerCreator.h
programm/manager/transform/: transformManager.cpp  transformManager.h  transformManagerCreator.cpp  transformManagerCreator.h
programm/material/: material.cpp  material.h
programm/math_primitives/: base_math_exception.h  base_math_primitive.h
programm/math_primitives/ray/: ray.cpp  ray.cu  ray.h
programm/math_primitives/vector/: vector.cpp  vector.h  vector_exceptions.h
programm/object/: object.h
programm/object/invisibleObject/: baseCamera.h  camera.cpp  camera.h  cameraStructure.cpp  cameraStructure.h
programm/object/invisibleObject/lightSource/: LightSource.cpp  LightSource.cu  LightSource.cuh  LightSource.h  baseLightSource.h
programm/object/primitives/: edge.cpp  edge.h  point.cpp  point.h  transform.cuh  transform.h  vertex.h
programm/object/visibleObject/: CudaShape.cpp  CudaShape.cu  CudaShape.cuh  CudaShape.h  composite.cpp  composite.h  frameModel.cpp  frameModel.h  modelStructure.cpp  modelStructure.h
programm/object/visibleObject/shapes/: baseShape.h
programm/object/visibleObject/shapes/box/: box.cpp  box.h
programm/object/visibleObject/shapes/cone/: cone.cpp  cone.h
programm/object/visibleObject/shapes/cyllinder/: cyllinder.cpp  cyllinder.h
programm/object/visibleObject/shapes/plane/: plane.cpp  plane.h
programm/object/visibleObject/shapes/sphere/: sphere.cpp  sphere.cu  sphere.h
programm/opengl/: EncodedStrcutsFuncs.h  EncodedStructs.h
programm/rayCastCanvas/: RayCastCanvas.cpp  RayCastCanvas.h
programm/ray_castring_canvas/: RayCastCanvas.cpp  RayCastCanvas.h  RayCastingCanvas.cpp  RayCastingCanvas.h
programm/renderer/: Renderer.cpp  Renderer.cu  Renderer.cuh  Renderer.h  baseRenderer.h
programm/scene/: scene.cpp  scene.cu  scene.h
programm/shaders/: ex.frag  ex.vert
programm/shapes/sphere/: sphere.cpp  sphere.h
programm/spectral_parameters/: material.cpp  material.h
programm/tests/: CMakeLists.txt
programm/utils/: cudaUtils.h  glmWrapper.cpp  glmWrapper.h
programm/visitor/: DrawVisitor.cpp  DrawVisitor.h  TransformVisitor.cpp  TransformVisitor.h  visitor.h
